# librnd

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile.am  README.md  configure.ac  rnd.c  rnd.h  rnd_tests.c  test_asserts.c  test_asserts.h
rnd.xcodeproj/: project.pbxproj
rnd.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
test/: main.c
